fixed overflow

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 }
 body{
 padding-top: 70px;
+overflow-x: hidden;
 
 }
 .navbar{
